base/ingressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`app-name.lan-domain`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: service
          port: 8080
    - match: Host(`app-name.wan-domain`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: service
          port: 8443
